# trade

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build_clang.sh  dev.md  pyproject.toml  quality.toml  setup.cfg  trade
cmake/: deps.cmake
config/: README.md  defaults.json  rss_feed_index.json  sentiment_backfill_channels.json  sentiment_cli_defaults.json  trade.yaml.example
design-policy/: v1.toml
docs/: 02_plan.md  03_plan.md  04_plan.md  05_plan_EBRT_01.md  06_plan_EBRT_02.md  07_plan_EBRT_03.md  08_plan_EBRT_04.md  09_plan_EBRT_05.md  10_plan_EBRT_06.md  11_plan_EBRT_07.md  12_plan_EBRT_08.md  13_plan_EBRT_09.md  14_plan_EBRT_10_usability_recovery_loop.md  15_plan_EBRT_11_product_refactor_workspace.md  16_plan_EBRT_12_restore_latest_recommendation.md  16_plan_EBRT_12_symbol_workspace.md  17_plan_EBRT_13_symbol_workspace_tabs.md  17_plan_EBRT_14_recommendation_recovery_closeout.md  18_plan_EBRT_14_symbol_evidence_dataops.md  18_plan_EBRT_15_latest_recommendation_chain_verification.md  19_plan_EBRT_15_candidates_today_upgrade.md  19_plan_EBRT_16_recovery_observability_closeout.md  20_plan_EBRT_16_data_storage_redesign.md  20_plan_EBRT_17_kline_normalization_and_artifact_paths.md  21_plan_EBRT_17_causal_decision_architecture.md  21_plan_EBRT_18_event_label_gate_investigation.md  22_plan_EBRT_18_ops_compute_workspace.md  22_plan_analysis_first_research_system.md  23_plan_crypto_research_data_quality_and_signal_validation.md  24_plan_data_operations_workflow.md  25_plan_forecast_research_v1.md  26_plan_btc_observatory_research_lab_v1.md  27_plan_btc_observatory_correctness_remediation.md  28_plan_modular_extensible_trading_system_architecture.md  29_plan_btc_observatory_exchange_kline_v2.md  architecture-2.0.md  claude-latest-plan.md  评估报告_技术因子基线.md  项目分析与美股预测方向.md
engine/: CMakeLists.txt
engine/cmake/: deps.cmake  python_bindings.cmake  submodule_check.cmake  tests.cmake  trade_cli_sources.cmake  trade_core_sources.cmake
engine/include/trade/app/pipelines/: train_pipeline.h
engine/include/trade/backtest/: backtest_engine.h  broker_sim.h  performance.h  portfolio_state.h  reporting.h  slippage.h  strategy.h  validation.h
engine/include/trade/cli/: args.h  commands.h  shared.h
engine/include/trade/common/: config.h  time_utils.h  types.h
engine/include/trade/decision/: decision_report.h  order_manager.h  portfolio_opt.h  pre_trade_check.h  signal.h  signal_combiner.h  universe_filter.h  verdict.h
engine/include/trade/features/: calendar.h  feature_engine.h  feature_monitor.h  fund_flow.h  fundamental.h  fundamental_features.h  industry.h  interaction.h  liquidity.h  momentum.h  preprocessor.h  price_limit.h  smart_money_signal.h  technical_signals.h  volatility.h
engine/include/trade/ml/: lgbm_model.h  model_evaluator.h  model_trainer.h  xgb_model.h
engine/include/trade/model/: account.h  bar.h  financial_report.h  instrument.h  market.h  timeframe.h
engine/include/trade/normalizer/: bar_normalizer.h
engine/include/trade/regime/: regime_detector.h
engine/include/trade/risk/: covariance.h  drawdown.h  kelly.h  position_sizer.h  risk_attribution.h  risk_monitor.h  stress_test.h  var.h
engine/include/trade/signal/: propagation.h
engine/include/trade/stats/: attribution.h  correlation.h  descriptive.h
engine/include/trade/storage/: cloud_sync.h  duck_store.h  google_drive_sync.h  metadata_store.h  parquet_reader.h  parquet_writer.h  storage_path.h
engine/include/trade/validator/: data_validator.h
engine/src/app/pipelines/: train_pipeline.cpp
engine/src/backtest/: backtest_engine.cpp  broker_sim.cpp  performance.cpp  portfolio_state.cpp  reporting.cpp  slippage.cpp  strategy.cpp  validation.cpp
engine/src/cli/: args.cpp  commands_analysis.cpp  commands_report.cpp  main.cpp  shared.cpp
engine/src/common/: config.cpp  time_utils.cpp
engine/src/decision/: decision_report.cpp  order_manager.cpp  portfolio_opt.cpp  pre_trade_check.cpp  signal_combiner.cpp  universe_filter.cpp
engine/src/features/: calendar.cpp  feature_engine.cpp  feature_monitor.cpp  fund_flow.cpp  fundamental.cpp  fundamental_features.cpp  industry.cpp  interaction.cpp  liquidity.cpp  momentum.cpp  preprocessor.cpp  price_limit.cpp  smart_money_signal.cpp  technical_signals.cpp  volatility.cpp
engine/src/ml/: lgbm_model.cpp  model_evaluator.cpp  model_trainer.cpp
engine/src/model/: bar.cpp  instrument.cpp
engine/src/normalizer/: bar_normalizer.cpp
engine/src/regime/: regime_detector.cpp
engine/src/risk/: covariance.cpp  drawdown.cpp  kelly.cpp  position_sizer.cpp  risk_attribution.cpp  risk_monitor.cpp  stress_test.cpp  var.cpp
engine/src/signal/: propagation.cpp
engine/src/stats/: attribution.cpp  correlation.cpp  descriptive.cpp
engine/src/storage/: cloud_sync.cpp  duck_store.cpp  google_drive_sync.cpp  metadata_store.cpp  parquet_reader.cpp  parquet_writer.cpp  storage_path.cpp
engine/src/validator/: data_validator.cpp
engine/tests/integration/: test_pipeline.cpp
engine/tests/unit/: test_backtest.cpp  test_bar.cpp  test_decision.cpp  test_duck_store.cpp  test_features.cpp  test_fundamental_features.cpp  test_google_drive_sync.cpp  test_metadata.cpp  test_ml.cpp  test_normalizer.cpp  test_parquet.cpp  test_propagation.cpp  test_regime.cpp  test_risk.cpp  test_smart_money.cpp  test_stats.cpp  test_technical_signals.cpp  test_types.cpp  test_validator.cpp
engine/tradedb-driver/: .sdkmanrc  README.md  pom.xml
engine/tradedb-driver/src/main/java/io/tradedb/jdbc/: TradeDbBootstrap.java  TradeDbDriver.java  TradeDbJdbcUrl.java
engine/tradedb-driver/src/test/java/io/tradedb/jdbc/: TradeDbDriverTest.java
notebooks/: 00_data_status.ipynb  01_market_overview.ipynb  02_sentiment.ipynb  03_knowledge_graph.ipynb  04_model_training.ipynb  05_data_analysis.ipynb  06_sector_analysis.ipynb  07_stock_picks.ipynb
openspec/: config.yaml
scripts/: backup.py  migrate_kline_consolidate.py  migrate_paths.sh
tests/: test_belief_engine.py  test_btc_observatory_api.py  test_btc_provider_contract.py  (+74 more)
(+712 files in other folders)
