[project]
name = "trade-py"
version = "0.1.0"
description = "Quantitative trading decision support system"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "plotly",
    "matplotlib",
    "anthropic>=0.40.0",
    "feedparser>=6.0",
    "pandas>=2.0",
    "duckdb>=1.0",
    "pyarrow>=14.0",
    "akshare>=1.12",
    "streamlit>=1.35",
    "schedule>=1.2",
    "ipykernel>=7.2.0",
    "nbformat>=4.2.0",
    "pandas-stubs~=2.3.3",
    "networkx>=3.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyter",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "shap>=0.45",
    "joblib>=1.3",
    "networkx>=3.0",
]
nlp = [
    "torch",
    "transformers",
    "onnx",
    "onnxruntime",
]

[tool.uv]
package = false

[tool.uv.sources]
