[project]
name = "trade-py"
version = "0.1.0"
description = "Quantitative trading decision support system"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "plotly",
    "matplotlib",
    "anthropic>=0.40.0",
    "feedparser>=6.0",
    "pandas>=2.0",
    "duckdb>=1.0",
    "pyarrow>=14.0",
    "tqdm>=4.0",
    "tushare>=1.2",
    "akshare>=1.12",
    "baostock>=0.8",
    "streamlit>=1.35",
    "schedule>=1.2",
    "ipykernel>=7.2.0",
    "nbformat>=4.2.0",
    "pandas-stubs~=2.3.3",
    "networkx>=3.4.2",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyter",
    "notebook",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "shap>=0.45",
    "joblib>=1.3",
    "networkx>=3.0",
]
nlp = [
    "torch",
    "transformers",
    "onnx",
    "onnxruntime",
]

[project.scripts]
trade-py = "trade_py.cli.main:main"

[tool.setuptools.packages.find]
include = ["trade_py*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["engine", ".venv", "build", "dist", "notebooks", "config", "deployment"]

[tool.uv]
package = true

[tool.uv.sources]
