[project]
name = "trade-py"
version = "0.1.0"
description = "Quantitative trading decision support system"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "plotly",
    "matplotlib",
    "anthropic>=0.40.0",
    "feedparser>=6.0",
    "pandas>=2.0",
    "duckdb>=1.0",
    "pyarrow>=14.0",
    "tqdm>=4.0",
    "tushare>=1.2",
    "akshare>=1.12",
    "baostock>=0.8",
    "streamlit>=1.35",
    "schedule>=1.2",
    "pandas-stubs~=2.3.3",
    "networkx>=3.4.2",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.7.2",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.2.2",
    "tomli>=2.2,<3; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.29,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
    "tomli>=2.2,<3",
]
ml = [
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "shap>=0.45",
    "joblib>=1.3",
    "networkx>=3.0",
]
nlp = [
    "torch",
    "transformers",
    "onnx",
    "onnxruntime",
]

[project.scripts]
trade-py = "trade_py.cli.main:main"

[tool.setuptools.packages.find]
include = ["trade_py*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["engine", ".venv", "build", "dist", "deployment"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "build",
    "data",
    "engine/vendor",
    "trade_web/frontend/node_modules",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["trade_py", "trade_web"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["trade_py", "trade_web/backend", "tests"]
exclude = [
    "build",
    "data",
    "engine/vendor",
    "trade_web/frontend",
]
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.uv]
package = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "requests-html>=0.10.0",
]
